fix: timetable schedule and cell alignment

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -22,5 +22,5 @@ body {
     --schedule-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
     --time-label-width: 80px;
     --cell-width: 70px;
-    --cell-height: 44px;
+    --cell-height: 45px;
 }
